# CART

./: .gitignore  Dockerfile  Dockerfile.backend  README.md  app.py  environment.yml  pyproject.toml  streamlit_app.py
CART/src/: cli.py  main.py  score.py  utils.py
CART/src/api/: __init__.py  api_server.py  app.py
CART/src/data/: augmentation.py  dunnet.py  mds.py  mutants.py
CART/src/modeling/: dunnet.py  embeddings.py  evaluation.py  finetuning.py  gitpush_file.sh  pll.py  pll_simplified.py  prediction.py  run_experiments.py  run_pll_analysis.py  score.py  visualization.py
CART/src/utils/: __init__.py  sequence_utils.py
CART/tests/: test_data.py  test_mps.py  test_prediction.py  test_utils.py  view_mlflow.py
fasta/: cd3z.fasta  scFV_FMC63.fasta  wt_cd28.fasta
mutants/: CAR_mutants.csv  CAR_mutants.fasta  CAR_mutants.tsv  CAR_mutants_cytox.csv  mutants.csv
